Implemented few more tests, but now Gmail decided to screw me with the smtp server, can't send an email via my contact form anymore.

--- a/FamilyAuto/Views/Account/RoleIndex.cshtml
+++ b/FamilyAuto/Views/Account/RoleIndex.cshtml
@@ -19,5 +19,5 @@
         counter++;
     }
 
-    @Html.ActionLink("Create New Role", "RoleCreate", new { Controller = "Account" }, new { @class = "btn btn-default" }) | @Html.ActionLink("Add Role to User", "RoleAddToUser", new { Controller = "Account" }, new { @class = "btn btn-default" })
+    @Html.ActionLink("Create New Role", "RoleCreate", new { Controller = "Account" }, new { @class = "btn btn-default" }) | @Html.ActionLink("Add Role to User", "RoleAddToUser", new { Controller = "Account" }, new { @class = "btn btn-default", @Id = "addRole"})
 </div>
