--- a/FamilyAuto/Views/IMS/Index.cshtml
+++ b/FamilyAuto/Views/IMS/Index.cshtml
@@ -34,7 +34,7 @@
 {
     <div class="row">
         <div class="col-lg-4">
-            @Html.ActionLink("Manage Roles", "RoleIndex", new { Controller = "Account" }, new { @class = "btn btn-lg btn-primary" })
+            @Html.ActionLink("Manage Roles", "RoleIndex", new { Controller = "Account" }, new { @class = "btn btn-lg btn-primary", @Id = "manageRoles" })
         </div>
     </div>
 }
