--- a/FamilyAuto/Views/Account/RoleAddToUser.cshtml
+++ b/FamilyAuto/Views/Account/RoleAddToUser.cshtml
@@ -8,6 +8,7 @@
     <br />
     <br />
     <hr />
+    <div class="message-success"><h3 id="returnMessage">@ViewBag.ResultMessage</h3></div>
     <div class="row">
         <div class="col-lg-4">
             <h4>List roles for user</h4>
@@ -42,7 +43,7 @@
                 @Html.AntiForgeryToken()
                 @Html.ValidationSummary(true)
 
-                <div class="message-success">@ViewBag.ResultMessage</div>
+                
                 <p>
                     Username : @Html.DropDownList("UserName", ViewBag.Users as SelectList)
                 </p>
