Small fixes mainly related to visual representation, unathorized access management and routing fixes. Few test cases might have been added since the last commit.

--- a/FamilyAuto/Content/Site.css
+++ b/FamilyAuto/Content/Site.css
@@ -52,6 +52,9 @@ textarea {
     border: 3px outset lightgray;
 }
 
+.jumboPic {
+    background: url('../Images/background.jpg');
+}
 
 /*
 .squaredTwo {
