--- a/FamilyAuto/Views/Home/Index.cshtml
+++ b/FamilyAuto/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Family Auto";
 }
 
-<div class="jumbotron">
+<div class="jumbotron jumboPic">
         <h1>Family Auto</h1>
         <br />
     <button class="btn btn-info btn-lg" data-toggle="collapse" data-target="#VehicleType">Choose Vehicle Type</button>
