--- a/FamilyAuto/Views/Vehicle/Delete.cshtml
+++ b/FamilyAuto/Views/Vehicle/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2 id="delTitle">Delete</h2>
 
-<h3>Are you sure you want to delete the following vehicle?</h3>
+<h3 id="confirmDeletion">Are you sure you want to delete the following vehicle?</h3>
 <div>
     <h2>Vehicle ID - @Html.DisplayFor(model => model.Id)</h2>
     <hr />
