--- a/FamilyAuto/Views/Article/Delete.cshtml
+++ b/FamilyAuto/Views/Article/Delete.cshtml
@@ -4,11 +4,12 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2 id="delTitle">Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 id="confirmDeletion">Are you sure you want to delete the following article?</h3>
+
 <div>
-    <h4>Articles</h4>
+    <h2>Article ID - @Html.DisplayFor(model => model.Id)</h2>
     <hr />
     <dl class="dl-horizontal">
         <dt>
