--- a/FamilyAuto/Views/Home/News.cshtml
+++ b/FamilyAuto/Views/Home/News.cshtml
@@ -21,4 +21,14 @@
             </div>
         }
     </div>
+    <div class="col-md-4 imgContainer">
+        <img src="~/Images/News/1.jpg" class="img-responsive" style="background-attachment:local" />
+        <br />
+        <img src="~/Images/News/2.jpg" class="img-responsive" style="background-attachment:local" />
+        <br />
+        <img src="~/Images/News/3.png" class="img-responsive" style="background-attachment:local" />
+        <br />
+        <img src="~/Images/News/4.jpg" class="img-responsive" style="background-attachment:local" />
+        <br />
+    </div>
 </div>
