--- a/FamilyAuto/Views/Home/Services.cshtml
+++ b/FamilyAuto/Views/Home/Services.cshtml
@@ -6,6 +6,14 @@
 
 <h2>Services on offer</h2>
 <br />
+
+@if (ViewBag.ArticleNotFound != null)
+{
+    <h2>@ViewBag.ArticleNotFound</h2>
+}
+
+else
+{ 
 <div class="container">
     <div class="row">
         <div class="col-md-8">
@@ -32,3 +40,4 @@
         </div>
     </div>
 </div>
+}
