--- a/FamilyAuto/Views/IMS/Statistics.cshtml
+++ b/FamilyAuto/Views/IMS/Statistics.cshtml
@@ -14,14 +14,34 @@
 <h2>Statistics</h2>
 <br />
 <div class="container">
-    <div class="row">
-        <h4>@Html.ActionLink("Vehicles Sold: " + (string)ViewBag.VehiclesSold, "Index", new { Controller = "Vehicle" }, new { @class = "" })</h4>
+    <div class="row col-lg-10">
+        <h4>Quick Links</h4>
+        <dl class="dl-horizontal">
+            <dt>Vehicles On Sale: </dt>
+            <dd>
+                <b>@Html.ActionLink((string)ViewBag.VehiclesSold, "Index", new { Controller = "Vehicle" }, new { @class = "" })</b>
+            </dd>
+            <dt>Vehicles Sold:</dt>
+            <dd>
+                <b>@Html.ActionLink((string)ViewBag.VehiclesNotSold, "Index", new { Controller = "SoldVehicles" }, new { @class = "" })</b>
+            </dd>
+            <dt>Registered Customers: </dt>
+            <dd>
+                <b>@Html.ActionLink((string)ViewBag.RegisteredCustomers, "Index", new { Controller = "User" }, new { @class = "" })</b>
+            </dd>
+            <dt>Non-Registered Customers: </dt>
+            <dd>
+                <b>@Html.ActionLink((string)ViewBag.NonRegisteredCustomers, "Index", new { Controller = "User" }, new { @class = "" })</b>
+            </dd>
+        </dl>
+
+        @*<h4>@Html.ActionLink("Vehicles Sold: " + (string)ViewBag.VehiclesSold, "Index", new { Controller = "Vehicle" }, new { @class = "" })</h4>
 
         <h4>@Html.ActionLink("Vehicles On Sale: " + (string)ViewBag.VehiclesNotSold, "Index", new { Controller = "SoldVehicles" }, new { @class = "" })</h4>
 
         <h4>@Html.ActionLink("Registered Customers: " + (string)ViewBag.RegisteredCustomers, "Index", new { Controller = "User" }, new { @class = "" })</h4>
 
-        <h4>@Html.ActionLink("Non-Registered Customers: " + (string)ViewBag.NonRegisteredCustomers, "Index", new { Controller = "User" }, new { @class = "" })</h4>
+        <h4>@Html.ActionLink("Non-Registered Customers: " + (string)ViewBag.NonRegisteredCustomers, "Index", new { Controller = "User" }, new { @class = "" })</h4>*@
     </div>
 </div>
 
@@ -58,7 +78,7 @@
 
 }
 
-<button type="button" id="changeData" value="Change">Change</button>
+@*<button type="button" id="changeData" value="Change">Change</button>*@
 
 @*<table class="table table-striped">
         <tr>
@@ -149,9 +169,9 @@
 
         var series2 = chart1.getSeries().getItem(1);
 
-        series1.setGallery(cfx.Gallery.Lines);
+        series1.setGallery(cfx.Gallery.Bar);
 
-        series2.setGallery(cfx.Gallery.Bar);
+        series2.setGallery(cfx.Gallery.Lines);
 
         chart1.setDataSource(data);
 
