--- a/FamilyAuto/Views/Shared/_Layout.cshtml
+++ b/FamilyAuto/Views/Shared/_Layout.cshtml
@@ -28,6 +28,8 @@
                     <li>@Html.ActionLink("Showroom", "Showroom", new { Controller = "Vehicle" })</li>
                     <li>@Html.ActionLink("Services", "Services", new { Controller = "Home" })</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @if (User.IsInRole("Admin") || User.IsInRole("Content Manager"))
+                    {
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Manage <span class="caret"></span></a>
                         <ul class="dropdown-menu">
@@ -37,6 +39,7 @@
                             <li>@Html.ActionLink("Business Data", "Index", new { Controller = "IMS" })</li>
                         </ul>
                     </li>
+                    }
                     @*<li>@Html.ActionLink("IMS", "Index", new { Controller = "IMS" })</li>*@
                     @*<li>@Html.ActionLink("CMS", "Index", new { Controller = "Vehicle" })</li>*@
                 </ul>
