--- a/FamilyAuto/Views/Vehicle/Showroom.cshtml
+++ b/FamilyAuto/Views/Vehicle/Showroom.cshtml
@@ -8,20 +8,18 @@
     <h1>Family Auto SHOWROOM</h1>
 </div>
 
+@if(ViewBag.VehicleNotFound != null)
+{
+    <h2>@ViewBag.VehicleNotFound</h2>
+}
+else { 
 <div class="source-content" style="width: 75%; float: left">
     @foreach (var item in Model)
     {
-
+        string sector = "vehicleId" + @Html.Raw(item.Id);
         <div class="container-fluid listItems">
-            <div class="row">
+            <div class="row" id=@sector>
                 <div class="col-sm-3 item-list-spc">
-                    @*<a href="#">
-                            <img class="media-object" src="http://avatars.guildlaunch.net/user_files/3068351/user_avatar6409_mid.jpg" alt="Image of a Restaurant">
-                        </a>*@
-                    @*<a href="@Url.Action("Details")", new { id = item.Id }>
-                            <img src="@Url.Content()"
-                        </a>
-                        @Html.Raw(@Html.ActionLink("Edit-link", "Edit", new { id = item.Id }).ToHtmlString().Replace("Edit-link", item.VehiclePictures. "<img src=\"/Contents/img/logo.png\" ... />"))*@
                     @foreach (var i in item.VehiclePictures)
                     {
                         if (item.Id == i.VehicleID)
@@ -33,8 +31,8 @@
                         }
                         else
                         {
-                            <a href="@Url.Action("Details")" , new { id=item.Id }>
-                                <img class="image-listview" src="http://avatars.guildlaunch.net/user_files/3068351/user_avatar6409_mid.jpg" />
+                            <a href="@Url.Action("Details", new { id=item.Id })", id="@item.Id">
+                                <img class="image-listview" src="~/Images/rcLrK4Gc8.jpg" />
                             </a>
                         }
                     }
@@ -42,12 +40,9 @@
                 <div class="col-sm-7 item-list-spc">
                     <div class="media-body">
                         <h4 class="media-heading">
-
-                            @*<asp:HyperLink ID="@item.Make" Text='@Html.DisplayFor(modelItem => item.Make)' Font-Bold="True" Font-Underline="True" />*@
-
                             @Html.ActionLink(item.Make, "Details", new { id = item.Id }, new { @Id = item.Make }) - <span id="vehiclePrice">@Html.DisplayFor(modelItem => item.Price)</span>€
                         </h4>
-                        <p class="address">Model: <b>@Html.DisplayFor(modelItem => item.Model)</b>, Variant: <b>@Html.DisplayFor(modelItem => item.Variant)</b></p>
+                        <p class="model">Model: <b id=@Html.Raw(item.Model)>@Html.DisplayFor(modelItem => item.Model)</b>, Variant: <b>@Html.DisplayFor(modelItem => item.Variant)</b>, Type: <b>@Html.DisplayFor(modelItem => item.Type)</b></p>
                         <p class="power">Power: <b>@Html.DisplayFor(modelItem => item.VehicleEngine.Power)KW</b></p>
                         <p class="color">Color: <b>@Html.DisplayFor(modelItem => item.VehicleFeature.ExteriorColor)</b></p>
                         <p class="mileage">Mileage: <b><span id="vehicleMileage">@Html.DisplayFor(modelItem => item.VehicleHistory.Mileage)</span>km</b></p>
@@ -59,27 +54,12 @@
         </div>
     }
 </div>
-
+}
 <div class="filterStyle">
     <h3>FILTERS:</h3>
     <br />
     @Html.ActionLink("Show All", "Showroom")
-    @*<a href="#" class="showAll">Show All</a>*@
     <br />
-
-    @*<h5>Vehicle Type</h5>
-        <div class="dropdown">
-            <label>
-                <select>
-                    <option value="Sports Car">Sports Car</option>
-                    <option value="Small Car">Small Car</option>
-                    <option value="Sedan">Sedan</option>
-                    <option value="Van">Van</option>
-                    <option value="Luxury Car">Luxury Car</option>
-                </select>
-            </label>
-        </div>*@
-
 
     <div class="dropdown">
         @using (Html.BeginForm("Showroom", "Vehicle", FormMethod.Get))
@@ -89,56 +69,16 @@
             <h5>Make</h5>
             @Html.DropDownList("make", new SelectList(ViewBag.Make), "", new { @onchange = "FillModel()" })
             <h5>Model</h5>
-            @*@Html.DropDownList("model", new SelectList(ViewBag.Model))*@
             @Html.DropDownList("model", new SelectList(Enumerable.Empty<SelectListItem>(), "Id", "Model"), "")
             <h5>Milleage</h5>
             @Html.DropDownList("mileage", new SelectList(ViewBag.Mileage), "")
             <h5>Price range</h5>
-            @*<div class="input-sm">*@
                 @Html.TextBox("priceFrom", "From", new { @type = "number", @placeholder = "From" })
                 @Html.TextBox("priceTo", "To", new { @type = "number", @placeholder = "To" })
-            @*</div>*@
                 <br /><br />
                 <input type="submit" value="Filter" class="btn-sm btn-default" />
         }
-        @*<label>
-                <select>
-                    <option value="BMW">BMW</option>
-                    <option value="Nissan">Nissan</option>
-                    <option value="Opel">Opel</option>
-                    <option value="Volvo">Volvo</option>
-                    <option value="Volkswagen">Volkswagen</option>
-                </select>
-            </label>*@
     </div>
-
-    @*<h5>Model</h5>
-        <div class="dropdown">
-                <select>
-                    <option value="Z1">Z1</option>
-                    <option value="Astra">Astra</option>
-                    <option value="Pathfinder">Pathfinder</option>
-                    <option value="S60">S60</option>
-                    <option value="Polo">Polo</option>
-                </select>
-        </div>*@
-
-    @*<h5>Mileage (up to)</h5>
-        <div class="dropdown">
-            <select>
-                <option value="50000">50000</option>
-                <option value="100000">100000</option>
-                <option value="200000">200000</option>
-                <option value="300000">300000</option>
-            </select>
-        </div>*@
-
-    @*<h5>Price range</h5>
-    <div class="input-sm">
-        <input type="number" /> From<br />
-        <input type="number" /> To
-    </div>*@
-
 </div>
 <br style="clear: left;" />
 
