--- a/FamilyAuto/Views/IMS/Index.cshtml
+++ b/FamilyAuto/Views/IMS/Index.cshtml
@@ -18,13 +18,13 @@
     <div class=col-md-4>
         <h4>Vehicle and Service Orders</h4>
         <div class="btn-group-vertical">
-            @Html.ActionLink("Manage Services Ordered", "Index", new { Controller = "ServiceOrder" }, new { @class = "btn btn-lg btn-primary" })
+            @Html.ActionLink("Manage Services Ordered", "Index", new { Controller = "ServiceOrder" }, new { @class = "btn btn-lg btn-success" })
             @Html.ActionLink("Manage Vehicle Sales", "Index", new { Controller = "SoldVehicles" }, new { @class = "btn btn-lg btn-primary" })
         </div>
     </div>
     <div class=col-md-4>
         <h4>Business Statistics</h4>
-        @Html.ActionLink("Statistics", "Statistics", new { Controller = "IMS" }, new { @class = "btn btn-lg btn-primary" })
+        @Html.ActionLink("Statistics", "Statistics", new { Controller = "IMS" }, new { @class = "btn btn-lg btn-info" })
     </div>
 </div>
 <br />
