--- a/FamilyAuto/Views/Account/RoleAddToUser.cshtml
+++ b/FamilyAuto/Views/Account/RoleAddToUser.cshtml
@@ -51,7 +51,7 @@
                     Role Name: @Html.DropDownList("RoleName", ViewBag.Roles as SelectList)
                 </p>
 
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Add user to selected role" class="btn btn-primary" />
             }
         </div>
         <div class="col-lg-4">
