--- a/FamilyAuto/Views/IMS/Statistics.cshtml
+++ b/FamilyAuto/Views/IMS/Statistics.cshtml
@@ -11,7 +11,7 @@
 <link href="~/Styles/Attributes/jchartfx.attributes.css" rel="stylesheet" />
 <link href="~/Styles/Palettes/jchartfx.palette.css" rel="stylesheet" />
 
-<h2>Statistics</h2>
+<h2>Business Statistics</h2>
 <br />
 <div class="container">
     <div class="row col-lg-10">
@@ -49,11 +49,11 @@
     <div class="row">
         <div class="btn-group">
             <a href="#" class="btn btn-primary statistics" id="topCustomersNumbers">Cars bought per customer</a>
-            <a href="#" class="btn btn-primary statistics" id="topCustomersSpent">Money spent per customer</a>
+            <a href="#" class="btn btn-info statistics" id="topCustomersSpent">Money spent per customer</a>
             <a href="#" class="btn btn-primary statistics" id="topStaffNumbers">Cars sold by sales person</a>
-            <a href="#" class="btn btn-primary statistics" id="topSellingServices">Most sold services</a>
+            <a href="#" class="btn btn-info statistics" id="topSellingServices">Most sold services</a>
             <a href="#" class="btn btn-primary statistics" id="topEarningServices">Top earning services</a>
-            <a href="#" class="btn btn-primary statistics" id="salesData">Sales chronology</a>
+            <a href="#" class="btn btn-info statistics" id="salesData">Sales chronology</a>
         </div>
     </div>
 </div>
