--- a/FamilyAuto/Views/ServiceOrder/Index.cshtml
+++ b/FamilyAuto/Views/ServiceOrder/Index.cshtml
@@ -12,32 +12,76 @@
 <table class="table table-striped table-hover">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Price)
+            @Html.ActionLink("Service Name", "Index", new { sortOrder = ViewBag.ServiceName })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Paid)
+            @Html.ActionLink("Customer", "Index", new { sortOrder = ViewBag.CustomerId })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.OrderedOnDate)
+            @Html.ActionLink("Price", "Index", new { sortOrder = ViewBag.FinalPrice })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.DueDate)
+            @Html.ActionLink("Date Ordered", "Index", new { sortOrder = ViewBag.DateOrdered })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.DeliveredDate)
+            @Html.ActionLink("Date Due", "Index", new { sortOrder = ViewBag.DateDue })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Articles.ArticleTitle)
+            @Html.ActionLink("Date Delivered", "Index", new { sortOrder = ViewBag.DateDelivered })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Customers.FirstName)
+            @Html.ActionLink("Paid", "Index", new { sortOrder = ViewBag.Paid })
         </th>
+        @*<th>
+        @Html.DisplayNameFor(model => model.Price)
+    </th>
+    <th>
+        @Html.DisplayNameFor(model => model.Paid)
+    </th>
+    <th>
+        @Html.DisplayNameFor(model => model.OrderedOnDate)
+    </th>
+    <th>
+        @Html.DisplayNameFor(model => model.DueDate)
+    </th>
+    <th>
+        @Html.DisplayNameFor(model => model.DeliveredDate)
+    </th>
+    <th>
+        @Html.DisplayNameFor(model => model.Articles.ArticleTitle)
+    </th>
+    <th>
+        @Html.DisplayNameFor(model => model.Customers.FirstName)
+    </th>*@
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
         <td>
+            @Html.DisplayFor(modelItem => item.Articles.ArticleTitle)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Customers.FirstName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Price)
+        </td>
+
+        <td>
+            @Html.DisplayFor(modelItem => item.OrderedOnDate)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.DueDate)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.DeliveredDate)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Paid)
+        </td>
+
+        @*<td>
             @Html.DisplayFor(modelItem => item.Price)
         </td>
         <td>
@@ -57,7 +101,7 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Customers.FirstName)
-        </td>
+        </td>*@
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Details", "Details", new { id=item.Id }) |
