--- a/FamilyAuto/Views/SoldVehicles/Index.cshtml
+++ b/FamilyAuto/Views/SoldVehicles/Index.cshtml
@@ -12,32 +12,62 @@
 <table class="table table-striped table-hover">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.DateSold)
+            @Html.ActionLink("Vehicle Id and Name", "Index", new { sortOrder = ViewBag.VehicleId })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.DateCreated)
+            @Html.ActionLink("Customer Id and Name", "Index", new { sortOrder = ViewBag.CustomerId })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.FinalPrice)
+            @Html.ActionLink("Final Price", "Index", new { sortOrder = ViewBag.FinalPrice })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Customers.FirstName)
+            @Html.ActionLink("Date Created", "Index", new { sortOrder = ViewBag.DateCreated })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Vehicle.Make)
+            @Html.ActionLink("Date Sold", "Index", new { sortOrder = ViewBag.DateSold })
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.VehicleIdName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CustomerIdName)
-        </th>
+        @*<th>
+        @Html.DisplayNameFor(model => model.DateSold)
+    </th>
+    <th>
+        @Html.DisplayNameFor(model => model.DateCreated)
+    </th>
+    <th>
+        @Html.DisplayNameFor(model => model.FinalPrice)
+    </th>
+    <th>
+        @Html.DisplayNameFor(model => model.Customers.FirstName)
+    </th>
+    <th>
+        @Html.DisplayNameFor(model => model.Vehicle.Make)
+    </th>
+    <th>
+        @Html.DisplayNameFor(model => model.VehicleIdName)
+    </th>
+    <th>
+        @Html.DisplayNameFor(model => model.CustomerIdName)
+    </th>*@
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
         <td>
+            @Html.DisplayFor(modelItem => item.VehicleIdName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.CustomerIdName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.FinalPrice)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.DateCreated)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.DateSold)
+        </td>
+        @*<td>
             @Html.DisplayFor(modelItem => item.DateSold)
         </td>
         <td>
@@ -57,7 +87,7 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.CustomerIdName)
-        </td>
+        </td>*@
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Details", "Details", new { id=item.Id }) |
